--- a/Index3.html
+++ b/Index3.html
@@ -25,7 +25,6 @@
   </header>
 
   <h1>Common Diets <i class="fa-solid fa-paw"></i></h1>
-  
     <div class="flex-container__dry">
       <div class="flex-left__dry">
         <h2>Dry Food:</h2>
@@ -33,10 +32,8 @@
       </div>
     <div class="flex-right__dry">
       <p>Dry food contains between six and 10 percent water. Depending on the specific formulation, a mixture of
-      ingredients are combined, extruded, and dried into bite-sized pieces. 
-      
-      <br> Ingredients may include:
-
+      ingredients are combined, extruded, and dried into bite-sized pieces. <br>
+      Ingredients may include:
       meat and/or meat byproducts
       poultry and/or poultry byproducts
       grain and/or grain byproducts
