added info on home page, fixed diet page, and changed css

--- a/index.html
+++ b/index.html
@@ -62,12 +62,8 @@
 
   <h1>Welcome! <i class="fa-solid fa-paw"></i></h1>
 
-  <p id="home-paragraph">Bonk. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-    ut labore et dolore magna aliqua. Ut enim ad minim veniam. Consectetur adipiscing elit, sed do eiusmod tempor
-    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. Lorem ipsum dolor sit amet, consectetur
-    adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
-    Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-    veniam.
+  <p id="home-paragraph">This site was designed to host basic information regarding cats and their diets. So why cats? I made this site because I like cats. I find them adorable, independent, and funny. Cats have also been a huge part of internet culture in the past, such as: keyboard cat, nyancat, I Can Has Cheezburger, grumpy cat, and more.
+
   </p>
 
   <footer>© Susan Lee 2022</footer>
