--- a/Index2.html
+++ b/Index2.html
@@ -57,7 +57,7 @@
     <div class="col">
       <div class="card">
         <img
-          src="https://www.advantagepetcare.com.au/sites/g/files/adhwdz311/files/styles/paragraph_image/public/2019-05/ragdoll_cat_01401.jpg?itok=nuF0q1gT"
+          src="https://assets.elanco.com/8e0bf1c2-1ae4-001f-9257-f2be3c683fb1/5b65b849-841f-4370-8030-95227c3d461e/ragdoll_cat_01401.jpg"
           class="card-img-top" alt="Ragdoll Cat">
         <div class="card-body">
           <h5 class="card-title"><i class="fa-solid fa-paw"></i> Ragdoll Cat</h5>
