--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
   <h1>Welcome! <i class="fa-solid fa-paw"></i></h1>
 
-  <p id="home-paragraph">This site was designed to host basic information regarding cats and their diets. So why cats? I made this site because I like cats. I find them adorable, independent, and funny. Cats have also been a huge part of internet culture in the past, such as: keyboard cat, nyancat, I Can Has Cheezburger, grumpy cat, and more.
+  <p id="home-paragraph">This site was designed to host basic information regarding cats and their diets. So why cats? I like cats. They're adorable, independent, and funny. In addition to that, cats have been a huge part of internet culture in the past, such as: keyboard cat, nyancat, I Can Has Cheezburger, grumpy cat, and more.
 
   </p>
 
